--- a/src/components/alarms.css
+++ b/src/components/alarms.css
@@ -5,9 +5,21 @@
   width: 100%;
   margin: 0 auto;
 }
+
 @media screen and (min-width: 768px) {
   .containerAlarmAll {
-    max-width: 700px;
+    max-width: 1200px;
+  }
+  .containerAlarm-alarmaScada {
+    font-family: sans-serif;
+    background: black;
+    color: aliceblue;
+    font-size: 22px;
+    border: 0.5px solid rgba(240, 248, 255, 0.884);
+    padding: 3px;
+    padding-left: 14px;
+    margin-bottom: 8px;
+    text-align: center;
   }
 }
 
@@ -34,9 +46,10 @@
 }
 .contaienrAlarm-contenido {
   font-size: 18px;
+  letter-spacing: 1.4px;
+  font-weight: bold;
 }
 .contaienrAlarm-contenido > span {
-  font-weight: bold;
   font-size: 18px;
   margin-right: 3px;
 }
@@ -45,16 +58,7 @@
   padding: 12px 10px;
   border-radius: 0px 0px 12px 12px;
 }
-.containerAlarm-alarmaScada {
-  font-family: sans-serif;
-  background: black;
-  color: aliceblue;
-  font-size: 22px;
-  border: 0.5px solid rgba(240, 248, 255, 0.884);
-  padding: 3px;
-  padding-left: 14px;
-  margin-bottom: 8px;
-}
+
 .containerAlarm-alarmaScada-title {
   margin-bottom: 4px;
   font-size: 18px;
@@ -64,6 +68,17 @@
   font-size: 18px;
   font-weight: bold;
   letter-spacing: 1.2px;
+}
+.containerAlarm-alarmaScada {
+  font-family: sans-serif;
+  background: black;
+  border-radius: 4px;
+  color: aliceblue;
+  font-size: 1em;
+  border: 0.5px solid rgba(240, 248, 255, 0.884);
+  padding: 3px;
+  text-align: ;
+  margin-bottom: 8px;
 }
 
 .buscador {
