--- a/src/components/alarms.css
+++ b/src/components/alarms.css
@@ -26,7 +26,7 @@
 .containerAlarm {
   display: flex;
   flex-wrap: wrap;
-  background-color: rgb(91, 224, 167);
+  background-color: rgb(95 183 145);
   color: rgb(255, 255, 255);
   margin: 5px;
   border-radius: 12px;
