--- a/src/components/alarms.css
+++ b/src/components/alarms.css
@@ -26,7 +26,7 @@
 .containerAlarm {
   display: flex;
   flex-wrap: wrap;
-  background-color: rgb(95 183 145);
+  background-color: rgb(119, 95, 183);
   color: rgb(255, 255, 255);
   margin: 5px;
   border-radius: 12px;
@@ -42,7 +42,7 @@
 .containerAlarm-title {
   display: flex;
   justify-content: space-around;
-  color: rgb(48, 49, 121);
+  color: rgb(244, 244, 247);
   border-bottom: 3px solid rgb(48, 49, 121);
 }
 .contaienrAlarm-contenido {
@@ -55,8 +55,8 @@
   margin-right: 3px;
 }
 .containerAlarm-descripcion {
-  color: rgb(48, 49, 121);
-  padding: 12px 10px;
+  color: rgb(244, 244, 247);;
+  padding: 12px 2px;
   border-radius: 0px 0px 12px 12px;
 }
 
@@ -65,10 +65,10 @@
   font-size: 18px;
 }
 .containerAlarm-descripcion {
-  margin-bottom: 10px;
   font-size: 18px;
-  font-weight: bold;
+  font-weight:500;
   letter-spacing: 1.2px;
+  margin-block-start: 0px;
 }
 .containerAlarm-alarmaScada {
   font-family: sans-serif;
@@ -107,4 +107,8 @@
   font-weight: bold;
   font-size: 18px;
   letter-spacing: 2.5px;
+}
+.containerAlarm-alarmaScada-historial{
+  text-align: right;
+  color: rgb(244, 244, 247);
 }
