--- a/src/components/alarms.css
+++ b/src/components/alarms.css
@@ -26,9 +26,10 @@
 .containerAlarm {
   display: flex;
   flex-wrap: wrap;
-  background-color: rgb(119, 95, 183);
+  background-color: rgb(22, 4, 77);
   color: rgb(255, 255, 255);
   margin: 5px;
+  border: 3px solid rgba(0, 0, 0, 0.34);
   border-radius: 12px;
   padding: 15px;
   flex-direction: column;
@@ -89,7 +90,6 @@
 }
 .buscador > h1 {
   text-align: center;
-  color: rgb(91, 224, 167);
   letter-spacing: 2px;
 }
 .inputBuscar {
