--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -19,16 +19,17 @@
 .ui.form input[type='text'],
 .ui.form select,
 .ui.form textarea {
-  color: rgb(42, 46, 104) !important;
-  font-weight: bold !important;
-  font-size: 17px;
-  padding-left: 7px;
-  padding: 15px;
-  background-color:rgba(255, 255, 255) ;
+  color: rgb(24, 27, 69) !important;
+  letter-spacing: 2px;
+  font-size: 15px;
+  padding-left: 5px;
+  padding: 7px;
+  border-radius: 12PX;
+  background-color:rgb(232, 230, 238);
 }
 .ui.form input[type='text']::placeholder,
 .ui.form textarea::placeholder {
-  color: rgba(42, 46, 104, 0.568);
+  color: rgba(1, 2, 18, 0.461);
 }
 .ui.warning.message {
   background-color: rgba(255,255,255)!important;
