--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -1,5 +1,5 @@
 .ui.modal > .content {
-  background-color: rgba(255, 255, 255);
+  background-color: rgb(195, 197, 201);
 }
 .ui.modal > .content > p {
   font-size: 20px;
@@ -22,14 +22,14 @@
   color: rgb(24, 27, 69) !important;
   letter-spacing: 2px;
   font-size: 15px;
-  padding-left: 5px;
-  padding: 7px;
+  padding: 8px 7px 7px 10px;
   border-radius: 12PX;
-  background-color:rgb(232, 230, 238);
+  font-weight: bold;
 }
 .ui.form input[type='text']::placeholder,
 .ui.form textarea::placeholder {
   color: rgba(1, 2, 18, 0.461);
+  font-weight: bold;
 }
 .ui.warning.message {
   background-color: rgba(255,255,255)!important;
@@ -45,25 +45,34 @@
   padding: 7px;
 }
 .ui.form select > option:focus {
-  background-color: rgb(42, 46, 104) !important;
+  background-color: rgb(44, 47, 94) !important;
 }
 .ui.negative.button {
-  background-color: rgb(42, 46, 104) !important;
-  border-radius: 30%;
+  background-color: rgb(26 28 59) !important;
+  border-radius: 50%;
   font-size: 10px;
 }
-
+.ui.negative.button:hover {
+  background-color: rgb(36, 38, 78) !important;
+  font-size: 11px;
+}
 .ui.error.message {
   background-color: rgba(255,255,255);
+  color: rgba(6, 9, 51, 0.8) !important;
+  border:none !important;
 }
 .botonAdd {
-  background-color: rgb(12, 18, 102) !important ;
+  background-color: rgb(26 28 59);
+  color: rgba(255,255,255);
+  padding: 10px;
+  border: none;
+  border-radius: 12px;
+  width: 300px;
+  text-align: center;
+  display: block;
+  margin: 0 auto;
 }
-.field>.ui{
-  color:rgba(255,255,255)!important;
-  background-color: rgba(6, 9, 51, 0.8);
+.botonAdd:hover{
+  background-color: rgb(23 29 100);
 }
-.field>.ui:hover{
-  background-color: rgb(32, 45, 226);
-  border: 1px solid rgb(0,0,0);
-}
+
