--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,22 @@ body {
   display:flex;
   width:100%;
   justify-content:space-between;
-  align-content: baseline;
+  align-items: baseline;
 }
 .header-btn{
   color: rgb(42, 46, 104) !important;
   font-weight: bold !important;
   text-align: center;
-  font-size: 17px !important;
+  font-size: 16px !important;
   border-radius: 6px;
+  border: none;
+  letter-spacing: 1.5px;
+  padding: 6px;
+  height: 20px;
+  line-height: 10px  
+}
+.header-btn:hover{
+  background-color:rgb(42, 46, 104) !important;
+  outline: 0.5px solid #fff !important;
+  color:#fff !important;
 }
