--- a/src/index.css
+++ b/src/index.css
@@ -14,9 +14,9 @@
 .btn {
   color: rgb(42, 46, 104) !important;
   font-weight: bold !important;
-  margin: 0 auto;
   text-align: center;
-  font-size: 18px !important;
+  letter-spacing: 1.5px;
+  font-size: 16px !important;
   -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
   -moz-box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
@@ -25,6 +25,10 @@
   -webkit-box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset;
   -moz-box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset;
   box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset;
+  outline: 2px solid rgb(250, 250, 251); 
+  color: #fff!important;
+  background-color:rgb(42, 46, 104)!important ;
+  transition: background 0.2s ease-out;
 }
 
 /*Modal*/
