--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,15 @@ body {
   justify-content:space-between;
   align-items: baseline;
 }
+.container-user{
+  display: flex;
+  align-items: baseline;
+}
+.container-user>h3{
+  margin-left: 9px;
+  margin-bottom: 0px;
+  letter-spacing: 1.2px;
+}
 .header-btn{
   color: rgb(42, 46, 104) !important;
   font-weight: bold !important;
@@ -17,7 +26,7 @@ body {
   letter-spacing: 1.5px;
   padding: 6px;
   height: 20px;
-  line-height: 10px  
+  line-height: 10px;  
 }
 .header-btn:hover{
   background-color:rgb(42, 46, 104) !important;
