--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -111,3 +111,17 @@
   transition: background 0.2s ease-out;
   
 }
+.Modal-header{
+  display: flex !important;
+  justify-content: center !important;
+  
+}
+.Modal-title{
+  margin-bottom: 0px !important;
+  font-size: 25px!important;
+}
+.Content-Icon{
+  margin-left: 8px;
+  margin-right: 8px;
+  
+}
