agregado actualizacion hasta en busqueda despues de editar

--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -82,6 +82,7 @@
   outline: 1px solid rgb(5, 13, 85); 
   font-weight: bold;
   transition: background 0.2s ease-out;
+  cursor: pointer;
 }
 
 .contenedor-botones-center{
