--- a/src/components/layout/home/alarms.css
+++ b/src/components/layout/home/alarms.css
@@ -154,3 +154,9 @@
   margin: 0 auto !important;
   
 }
+.contenedor-menu-admin{
+  display:flex;
+  align-items:center;
+  justify-content: space-evenly;
+  margin-top: 30px;
+}
