--- a/src/components/layout/home/alarms.css
+++ b/src/components/layout/home/alarms.css
@@ -160,3 +160,8 @@
   justify-content: space-evenly;
   margin-top: 30px;
 }
+.impresion{
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 8px;
+}
