--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -1,3 +1,16 @@
+/*Modal*/
+.title-modal {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+}
+.title-modal > h1 {
+  display: block;
+  margin: 0px auto;
+  color: rgb(4, 8, 58);
+}
+
 .ui.modal > .content {
   background-color: rgb(195, 197, 201);
 }
