--- a/src/components/layout/home/alarms.css
+++ b/src/components/layout/home/alarms.css
@@ -37,7 +37,8 @@
 }
 /* Contenedor de todas las alarmas*/
 .table{
-  margin: 25px auto;
+  margin: 15px auto;
+  width: 100%;
 }
 
 @media screen and (min-width: 768px) {
@@ -49,9 +50,8 @@
 .containerAlarm{
   display: block;
   background-color: var(--background-light);
-  width: 95%;
   padding: 15px;
-  margin: 15px auto;
+  margin: 0 auto;
   border: 2px solid rgba(0, 0, 0, 0.774);
   border-radius: 12px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
