--- a/src/components/layout/home/alarms.css
+++ b/src/components/layout/home/alarms.css
@@ -52,6 +52,7 @@
   background-color: var(--background-light);
   padding: 15px;
   margin: 18px auto;
+  max-width: 800px;
   border: 2px solid rgba(0, 0, 0, 0.774);
   border-radius: 12px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
